@@ -8,6 +8,10 @@ CHANGES
 - Avoid `z3c.form.testing` in tests: It depends on `lxml`, but `lxml`
   features are not needed here.
 
+- Using ``requiredInfo`` property to render the information about
+  required fields. This property returns an i18n message id making the
+  information translateable.
+
 
 0.8.0 (2009-11-30)
 ------------------
